--- a/src/Html/index.html
+++ b/src/Html/index.html
@@ -26,10 +26,26 @@
     <title>Frontend Mentor | Interactive comments section</title>
   </head>
   <body>
+    <div class="deleteModal hidden">
+      <div class="modalContent">
+        <div class="modal--text">
+          <h3 class="text--secondary delete--header">Delete Comment</h3>
+          <p class="text--neutral">
+            Are you sure you want to delete this comment? This will remove the
+            comment and can't be undone.
+          </p>
+        </div>
+        <div class="modal--buttons">
+          <div class="button-tertiary cancel--button">NO, CANCEL</div>
+          <div class="button-tertiary delete--button">YES, DELETE</div>
+        </div>
+      </div>
+    </div>
+
     <div class="wrapper">
       <!-- Add Comment -->
       <div class="addCommentWrapper">
-        <div class="commentNormalWrapper hidden">
+        <div class="commentNormalWrapper">
           <img
             class="userIcon"
             src="../../images/avatars/image-juliusomo.png"
@@ -59,11 +75,14 @@
           </div>
         </div>
       </div>
-
-      <!-- Reply Container -->
     </div>
+    <!-- Reply Container -->
     <script type="module" src="../js/main.js"></script>
+    <script type="module" src="../js/DeleteComment.js"></script>
+    <script type="module" src="../js/ReplyComment.js"></script>
+    <script type="module" src="../js/EditComment.js"></script>
     <script type="module" src="../js/Template2.js"></script>
     <script type="module" src="../js/TimeHandler.js"></script>
+    <script type="module" src="../js/VoteHandler.js"></script>
   </body>
 </html>
