--- a/src/Html/temp.html
+++ b/src/Html/temp.html
@@ -129,3 +129,153 @@
       </div>
     </div>
   </div>
+
+
+
+
+
+
+  <div class="commentContainer" data-id="${this.id}" data-vote="${this.score}">
+    <div class="commentContent">
+      <!-- Counter -->
+      <div class="counterWrapper">
+        <button class="counterButton counter--increment">
+          <h2 class="incrementText">+</h2>
+        </button>
+        <p class="counter--score text--primary" data-votes="${this.score}">${this.score}</p>
+        <button class="counterButton counter--decrement">
+          <h2 class="incrementText">-</h2>
+        </button>
+      </div>
+      <!-- Content -->
+      <div class="commentContentWrapper">
+        <div class="user--details">
+          <div class="content--user">
+            <img
+              class="userIcon"
+              src="${this.image}"
+              alt=""
+            />
+            <p class="text--secondary">${this.username}</p>
+             <p class="content--current_user">you</p>
+            <p class="text--neutral">${this.createdAt}</p>
+          </div>
+          <div class="comment--features">
+        <div class="comment--delete">
+          <img src="../../images/icon-delete.svg" alt="" />
+          <p class="text--primary text--delete">Delete</p>
+        </div>
+        <div class="comment--reply">
+          <img src="../../images/icon-edit.svg" alt="" />
+          <p class="text--primary">Edit</p>
+        </div>
+      </div>
+        </div>
+        <p class="text--neutral">
+          ${this.content}
+        </p>
+      </div>
+
+      <div class="counterFeatureContainerResponsive">
+
+            <!-- Counter Responsive -->
+            <div class="counterWrapper counterResponsive">
+            <button class="counterButton counter--increment">
+             <h2 class="incrementText">+</h2>
+            </button>
+            <p class="counter--score text--primary" data-votes="${this.score}">${this.score}</p>
+            <button class="counterButton counter--decrement">
+              <h2 class="incrementText">-</h2>
+            </button>
+          </div>
+
+          <!-- Comment Feature Responsive -->
+          <div class="comment--features">
+        <div class="comment--delete">
+          <img src="../../images/icon-delete.svg" alt="" />
+          <p class="text--primary text--delete">Delete</p>
+        </div>
+        <div class="comment--reply">
+          <img src="../../images/icon-edit.svg" alt="" />
+          <p class="text--primary">Edit</p>
+        </div>
+      </div>
+        </div>
+    </div>
+  </div>
+
+
+
+  <div class="commentContainer data-id="1" data-vote="12">
+    <div class="commentContent">
+      <!-- Counter -->
+      <div class="counterWrapper">
+        <button class="counterButton counter--increment">
+          <img class="counterImage" src="../../images/icon-plus.svg" alt="" />
+        </button>
+        <p class="counter--score text--primary" data-votes="12">12</p>
+        <button class="counterButton counter--decrement">
+          <img
+            class="counterImage"
+            src="../../images/icon-minus.svg"
+            alt=""
+          />
+        </button>
+      </div>
+
+      <!-- Content -->
+      <div class="commentContentWrapper">
+        <div class="user--details">
+          <div class="content--user">
+            <img
+              class="userIcon"
+              src="../../images/avatars/image-juliusomo.png"
+              alt=""
+            />
+            <p class="text--secondary">amyrobson</p>
+            <p class="text--neutral">1 month ago</p>
+          </div>
+          <div class="comment--reply">
+            <img src="../../images/icon-reply.svg" alt="" />
+            <p class="text--primary">Reply</p>
+          </div>
+        </div>
+        <p class="text--neutral">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque odio,
+          dolorum delectus voluptatibus veritatis exercitationem, itaque
+          repellendus incidunt at, illum blanditiis. Error, quae omnis laborum
+          fugiat assumenda asperiores officiis est?
+        </p>
+      </div>
+
+      <div class="counterFeatureContainerResponsive">
+        <!-- Counter Responsive -->
+        <div class="counterWrapper counterResponsive">
+          <button class="counterButton counter--increment">
+            <img
+              class="counterImage"
+              src="../../images/icon-plus.svg"
+              alt=""
+            />
+          </button>
+          <p class="counter--score text--primary" data-votes="12">12</p>
+          <button class="counterButton counter--decrement">
+            <img
+              class="counterImage"
+              src="../../images/icon-minus.svg"
+              alt=""
+            />
+          </button>
+        </div>
+
+        <!-- Comment Feature Responsive -->
+        <div class="comment--reply replyResponsive">
+          <img src="../../images/icon-reply.svg" alt="" />
+          <p class="text--primary">Reply</p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  inputLoginUsername.value = inputLoginPin.value = '';
+    inputLoginPin.blur();
