--- a/src/Html/index.html
+++ b/src/Html/index.html
@@ -79,10 +79,12 @@
     <!-- Reply Container -->
     <script type="module" src="../js/main.js"></script>
     <script type="module" src="../js/DeleteComment.js"></script>
-    <script type="module" src="../js/initReply.js"></script>
+    <script type="module" src="../js/ReplyComment.js"></script>
     <script type="module" src="../js/EditComment.js"></script>
     <script type="module" src="../js/Template2.js"></script>
     <script type="module" src="../js/TimeHandler.js"></script>
     <script type="module" src="../js/VoteHandler.js"></script>
   </body>
 </html>
+
+
