--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../css/styles.css" />
+    <link rel="stylesheet" href="src/css/styles.css" />
     <title>Frontend Mentor | Interactive comments section</title>
   </head>
   <body>
@@ -77,14 +77,12 @@
       </div>
     </div>
     <!-- Reply Container -->
-    <script type="module" src="../js/main.js"></script>
-    <script type="module" src="../js/DeleteComment.js"></script>
-    <script type="module" src="../js/ReplyComment.js"></script>
-    <script type="module" src="../js/EditComment.js"></script>
-    <script type="module" src="../js/Template2.js"></script>
-    <script type="module" src="../js/TimeHandler.js"></script>
-    <script type="module" src="../js/VoteHandler.js"></script>
+    <script type="module" src="src/js/main.js"></script>
+    <script type="module" src="src/js/DeleteComment.js"></script>
+    <script type="module" src="src/js/ReplyComment.js"></script>
+    <script type="module" src="src/js/EditComment.js"></script>
+    <script type="module" src="src/js/Template2.js"></script>
+    <script type="module" src="src/js/TimeHandler.js"></script>
+    <script type="module" src="src/js/VoteHandler.js"></script>
   </body>
 </html>
-
-
